--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.1.6",
+    "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^6.13.0",
     "cors": "^2.8.5",
+    "country-state-city": "^3.2.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0"
   },
