--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "tsx src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "migrate": "prisma migrate dev",
+    "migrate": "prisma migrate deploy",
     "generate": "prisma generate",
     "seed": "ts-node src/seed/seed.ts",
     "fix:country": "tsx src/seed/updateCountry.ts"
@@ -17,6 +17,7 @@
     "@clerk/clerk-sdk-node": "^5.1.6",
     "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^6.13.0",
+    "@sendgrid/mail": "^8.1.5",
     "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
     "dotenv": "^17.2.1",
