--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.1.6",
     "@faker-js/faker": "^9.9.0",
+    "cheerio": "^1.0.0-rc.12",
     "@prisma/client": "^6.13.0",
     "@sendgrid/mail": "^8.1.5",
     "@types/multer": "^2.0.0",
