--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.913.0",
+    "@aws-sdk/s3-request-presigner": "^3.913.0",
     "@clerk/clerk-sdk-node": "^5.1.6",
     "@faker-js/faker": "^9.9.0",
-    "cheerio": "^1.0.0-rc.12",
     "@prisma/client": "^6.13.0",
     "@sendgrid/mail": "^8.1.5",
     "@types/multer": "^2.0.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
     "dotenv": "^17.2.1",
