--- a/package.json
+++ b/package.json
@@ -16,20 +16,26 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.913.0",
     "@aws-sdk/s3-request-presigner": "^3.913.0",
+    "@bull-board/api": "5.23.0",
+    "@bull-board/express": "5.23.0",
+    "@bull-board/ui": "^5.23.0",
     "@clerk/clerk-sdk-node": "^5.1.6",
     "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^6.13.0",
     "@sendgrid/mail": "^8.1.5",
     "@types/multer": "^2.0.0",
     "axios": "^1.12.2",
+    "bullmq": "^5.61.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "googleapis": "^163.0.0",
+    "ioredis": "^5.8.2",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.10",
     "svix": "^1.75.0",
     "xlsx": "^0.18.5"
   },
