--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/nodemailer": "^6.4.15",
     "@types/node": "^24.1.0",
     "prisma": "^6.13.0",
     "ts-node": "^10.9.2",
