--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
+    "sharp": "^0.34.5",
     "svix": "^1.75.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/nodemailer": "^6.4.15",
     "@types/node": "^24.1.0",
+    "@types/nodemailer": "^6.4.15",
     "prisma": "^6.13.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
