--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@faker-js/faker": "^9.9.0",
     "@prisma/client": "^6.13.0",
     "@sendgrid/mail": "^8.1.5",
+    "@stripe/react-stripe-js": "github:stripe/react-stripe-js",
+    "@stripe/stripe-js": "^8.5.2",
     "@types/multer": "^2.0.0",
     "axios": "^1.12.2",
     "bullmq": "^5.61.2",
@@ -37,10 +39,9 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
     "sharp": "^0.34.5",
-    "svix": "^1.75.0",
-    "xlsx": "^0.18.5",
     "stripe": "^16.6.0",
-    "svix": "^1.75.0"
+    "svix": "^1.75.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
