Remove unused immediate-send email route

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
     "@types/nodemailer": "^6.4.15",
+    "@types/stripe": "^8.0.417",
     "prisma": "^6.13.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
